feat: Add custom duration settings & fix sound preview bug (v1.2)

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -21,5 +21,6 @@
   "quote_5": "Never give up!",
   "quote_6": "Your future self will thank you.",
   "quote_7": "Just a little more effort!",
-  "quote_8": "Just do it!"
+  "quote_8": "Just do it!",
+  "duration_settings": "Duration Settings"
 }
