--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -21,5 +21,6 @@
   "quote_5": "Asla pes etme!",
   "quote_6": "Gelecekteki sen sana teşekkür edecek.",
   "quote_7": "Biraz daha gayret!",
-  "quote_8": "Sadece yap!"
+  "quote_8": "Sadece yap!",
+  "duration_settings": "Süre Ayarları"
 }
