feat: Add 50+ motivational quotes, fix layout stability & refine UI (v1.6)

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,29 +3,72 @@
   "focus": "Focus",
   "short_break": "Short Break",
   "long_break": "Long Break",
-  "ready": "Are you ready? 💪",
-  "start_message": "Let's Go! 🚀",
-  "congrats": "Congrats! 🎉",
-  "new_goal": "New Goal 🎯",
+  "reset": "Reset",
+  "start": "START",
+  "pause": "PAUSE",
+  "resume": "RESUME",
+  "stop_alarm": "FINISH",
+  "ready": "Are you ready? ",
+  "start_message": "Let's Go! ",
+  "congrats": "Congrats! ",
+  "new_goal": "New Goal ",
   "settings_title": "Settings",
+  "duration_settings": "Duration Settings",
   "dark_mode": "Dark Mode",
   "sound_label": "Notification Sound",
   "language_label": "Language",
   "classic_bell": "Classic Bell",
   "digital": "Digital",
   "alarm": "Alarm",
-  "quote_1": "Well begun is half done!",
-  "quote_2": "You will do great things today.",
-  "quote_3": "Focus and succeed.",
-  "quote_4": "Work for your dreams.",
-  "quote_5": "Never give up!",
-  "quote_6": "Your future self will thank you.",
-  "quote_7": "Just a little more effort!",
-  "quote_8": "Just do it!",
-  "duration_settings": "Duration Settings",
-  "reset": "Reset",
-  "start": "START",
-  "pause": "PAUSE",
-  "resume": "RESUME",
-  "stop_alarm": "FINISH"
+
+  "quote_1": "A journey of a thousand miles begins with a single step. - Lao Tzu",
+  "quote_2": "Excellence is not an act, but a habit. - Aristotle",
+  "quote_3": "It does not matter how slowly you go as long as you do not stop. - Confucius",
+  "quote_4": "The future depends on what you do today. - Mahatma Gandhi",
+  "quote_5": "Victory belongs to those who can say 'Victory is mine'. - M. Kemal Atatürk",
+  "quote_6": "Just do it. - Nike",
+  "quote_7": "Manage your time, manage your life.",
+  "quote_8": "Stay hungry, stay foolish. - Steve Jobs",
+  "quote_9": "Talent wins games, but teamwork wins championships. - M. Jordan",
+  "quote_10": "The obstacle is the way. - Marcus Aurelius",
+  "quote_11": "Imagination is more important than knowledge. - Albert Einstein",
+  "quote_12": "Insanity is doing the same thing over and over and expecting different results. - Albert Einstein",
+  "quote_13": "The present is theirs; the future, for which I really worked, is mine. - Nikola Tesla",
+  "quote_14": "I have not failed. I've just found 10,000 ways that won't work. - Thomas Edison",
+  "quote_15": "Intelligence is the ability to adapt to change. - Stephen Hawking",
+  "quote_16": "Nothing in life is to be feared, it is only to be understood. - Marie Curie",
+  "quote_17": "If I have seen further, it is by standing on the shoulders of giants. - Isaac Newton",
+  "quote_18": "Doubt is the father of invention. - Galileo Galilei",
+  "quote_19": "It is not the strongest of the species that survives, nor the most intelligent... It is the one that is most adaptable to change. - Charles Darwin",
+  "quote_20": "Learning never exhausts the mind. - Leonardo da Vinci",
+  "quote_21": "An unexamined life is not worth living. - Socrates",
+  "quote_22": "He who rules himself can rule the world. - Plato",
+  "quote_23": "The roots of education are bitter, but the fruit is sweet. - Aristotle",
+  "quote_24": "That which does not kill us makes us stronger. - Friedrich Nietzsche",
+  "quote_25": "It is not enough to have a good mind; the main thing is to use it well. - René Descartes",
+  "quote_26": "Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself. - Rumi",
+  "quote_27": "Knowledge is to understand; knowledge is to understand yourself. - Yunus Emre",
+  "quote_28": "To see the limit of the possible, you must attempt the impossible. - Mehmed the Conqueror",
+  "quote_29": "There are no incurable diseases — only the lack of will. - Ibn Sina",
+  "quote_30": "Difficulties strengthen the mind, as labor does the body. - Seneca",
+  "quote_31": "It's not what happens to you, but how you react to it that matters. - Epictetus",
+  "quote_32": "When you arise in the morning think of what a privilege it is to be alive. - Marcus Aurelius",
+  "quote_33": "Knowing is not enough, we must apply. Willing is not enough, we must do. - Bruce Lee",
+  "quote_34": "Don't count the days, make the days count. - Muhammad Ali",
+  "quote_35": "I can accept failure, everyone fails at something. But I can't accept not trying. - Michael Jordan",
+  "quote_36": "Patience is a key element of success. - Bill Gates",
+  "quote_37": "If you get up in the morning and think the future is going to be better, it is a bright day. - Elon Musk",
+  "quote_38": "Your time is limited, so don't waste it living someone else's life. - Steve Jobs",
+  "quote_39": "No bird soars too high if he soars with his own wings. - Wright Brothers",
+  "quote_40": "Most people believe in intelligence, I do not, what distinguishes us is effort. - Aziz Sancar",
+  "quote_41": "He who takes no risks drinks no champagne. - Georgy Zhukov",
+  "quote_42": "The darkest hour is just before the dawn.",
+  "quote_43": "Water cuts through stone, not because of its power, but because of its persistence.",
+  "quote_44": "Success is where preparation and opportunity meet.",
+  "quote_45": "If you can't explain it simply, you don't understand it well enough. - Einstein",
+  "quote_46": "Logic will get you from A to B. Imagination will take you everywhere. - Einstein",
+  "quote_47": "Creativity is contagious, pass it on. - Einstein",
+  "quote_48": "Genius is making complex ideas simple. - Einstein",
+  "quote_49": "Do not put off for tomorrow what you can do today.",
+  "quote_50": "Your only limit is your mind."
 }
