--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -3,29 +3,72 @@
   "focus": "Odaklan",
   "short_break": "Kısa Mola",
   "long_break": "Uzun Mola",
-  "ready": "Hazır mısın? 💪",
-  "start_message": "Hadi Başlayalım! 🚀",
-  "congrats": "Tebrikler! 🎉",
-  "new_goal": "Yeni Hedef 🎯",
+  "reset": "Sıfırla",
+  "start": "BAŞLAT",
+  "pause": "DURAKLAT",
+  "resume": "DEVAM ET",
+  "stop_alarm": "BİTİR",
+  "ready": "Hazır mısın? ",
+  "start_message": "Hadi Başlayalım! ",
+  "congrats": "Tebrikler! ",
+  "new_goal": "Yeni Hedef ",
   "settings_title": "Ayarlar",
+  "duration_settings": "Süre Ayarları",
   "dark_mode": "Karanlık Mod",
   "sound_label": "Bildirim Sesi",
   "language_label": "Dil / Language",
   "classic_bell": "Klasik Zil",
   "digital": "Dijital",
   "alarm": "Alarm",
-  "quote_1": "Başlamak bitirmenin yarısıdır!",
-  "quote_2": "Bugün harika işler çıkaracaksın.",
-  "quote_3": "Odaklan ve başar.",
-  "quote_4": "Hayallerin için çalış.",
-  "quote_5": "Asla pes etme!",
-  "quote_6": "Gelecekteki sen sana teşekkür edecek.",
-  "quote_7": "Biraz daha gayret!",
-  "quote_8": "Sadece yap!",
-  "duration_settings": "Süre Ayarları",
-  "reset": "Sıfırla",
-  "start": "BAŞLAT",
-  "pause": "DURAKLAT",
-  "resume": "DEVAM ET",
-  "stop_alarm": "BİTİR"
+
+  "quote_1": "Bin kilometrelik yolculuk tek bir adımla başlar. - Lao Tzu",
+  "quote_2": "Mükemmellik bir eylem değil, bir alışkanlıktır. - Aristoteles",
+  "quote_3": "Durmadığın sürece ne kadar yavaş gittiğinin önemi yoktur. - Konfüçyüs",
+  "quote_4": "Gelecek, bugün ne yaptığına bağlıdır. - Mahatma Gandhi",
+  "quote_5": "Zafer, zafer benimdir diyebilenindir. - M. Kemal Atatürk",
+  "quote_6": "Sadece yap. - Nike",
+  "quote_7": "Zamanını yönet, hayatını yönet.",
+  "quote_8": "Aç kal, budala kal. - Steve Jobs",
+  "quote_9": "Yetenek maç kazandırır, zeka ve takım oyunu şampiyonluk. - M. Jordan",
+  "quote_10": "Engel, yolu gösterir. - Marcus Aurelius",
+  "quote_11": "Hayal gücü, bilgiden daha önemlidir. - Albert Einstein",
+  "quote_12": "Delilik, aynı şeyi tekrar tekrar yapıp farklı sonuçlar beklemektir. - Albert Einstein",
+  "quote_13": "Bugün onların olsun ama uğruna çok uğraştığım gelecek benimdir. - Nikola Tesla",
+  "quote_14": "Başarısız olmadım, sadece işe yaramayan 10.000 yol buldum. - Thomas Edison",
+  "quote_15": "Zeka, değişime ayak uydurabilme yeteneğidir. - Stephen Hawking",
+  "quote_16": "Hayatta hiçbir şeyden korkmayın, sadece anlayın. - Marie Curie",
+  "quote_17": "Devlerin omuzlarında durduğum için daha uzağı görebildim. - Isaac Newton",
+  "quote_18": "Şüphe, bilimin babasıdır. - Galileo Galilei",
+  "quote_19": "Ne en güçlü olan hayatta kalır, ne de en zeki... Değişime en çok adapte olabilen kalır. - Charles Darwin",
+  "quote_20": "Öğrenmek aklı asla tüketmez. - Leonardo da Vinci",
+  "quote_21": "Sorgulanmamış hayat yaşamaya değmez. - Sokrates",
+  "quote_22": "Kendini yönetirsen, dünyayı yönetecek gücü bulursun. - Platon",
+  "quote_23": "Eğitimin kökleri acı, meyveleri tatlıdır. - Aristoteles",
+  "quote_24": "Beni öldürmeyen şey güçlendirir. - Friedrich Nietzsche",
+  "quote_25": "İyi bir zihne sahip olmak yetmez, onu iyi kullanmak gerekir. - René Descartes",
+  "quote_26": "Dün akıllıydım dünyayı değiştirmek istedim; bugün bilgeyim kendimi değiştiriyorum. - Mevlana",
+  "quote_27": "İlim ilim bilmektir, ilim kendin bilmektir. - Yunus Emre",
+  "quote_28": "İmkanın sınırını görmek için imkansızı denemek lazım. - Fatih Sultan Mehmet",
+  "quote_29": "Şifasız hastalık yoktur, irade eksikliği hariç. - İbn-i Sina",
+  "quote_30": "Zorluklar, zihni güçlendirir, tıpkı çalışmanın bedeni güçlendirdiği gibi. - Seneca",
+  "quote_31": "Seni engelleyen olaylar değil, olaylara bakış açındır. - Epiktetos",
+  "quote_32": "Sabah uyandığında hayatta olmanın ne büyük bir ayrıcalık olduğunu düşün. - Marcus Aurelius",
+  "quote_33": "Bilmek yetmez, uygulamalıyız. İstemek yetmez, yapmalıyız. - Bruce Lee",
+  "quote_34": "Günleri sayma, günleri sayılmaya değer kıl. - Muhammed Ali",
+  "quote_35": "Başarısızlığı kabul edebilirim ama denememiş olmayı asla. - Michael Jordan",
+  "quote_36": "Sabır, başarının temel unsurudur. - Bill Gates",
+  "quote_37": "Sabah uyanıp geleceğin harika olacağını düşünmüyorsan, o günün bir anlamı yok. - Elon Musk",
+  "quote_38": "Zamanın kısıtlı, onu başkasının hayatını yaşayarak harcama. - Steve Jobs",
+  "quote_39": "Uçmak için kanatlara değil, hayallere ihtiyacın var. - Wright Kardeşler",
+  "quote_40": "Çoğu insan zekaya inanır, ben inanmam, bizi birbirimizden ayıran emektir. - Aziz Sancar",
+  "quote_41": "Risk almayan, hiçbir şey yapamaz. - Georgy Zhukov",
+  "quote_42": "En karanlık an, şafaktan hemen önceki andır.",
+  "quote_43": "Taşı delen suyun gücü değil, damlaların sürekliliğidir.",
+  "quote_44": "Başarı, hazırlık ve fırsatın buluştuğu yerdir.",
+  "quote_45": "Bir şeyi basitçe anlatamıyorsan, onu yeterince iyi anlamamışsın demektir. - Einstein",
+  "quote_46": "Mantık seni A noktasından B noktasına götürür. Hayal gücü ise her yere. - Einstein",
+  "quote_47": "Yaratıcılık bulaşıcıdır, onu başkalarına da bulaştırın. - Einstein",
+  "quote_48": "Dahi, karmaşık olanı basitleştirendir. - Einstein",
+  "quote_49": "Bugünün işini yarına bırakma, çünkü yarın da bugün gibi olacak.",
+  "quote_50": "Senin sınırın, sadece kendi zihnindir."
 }
