--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -20,6 +20,10 @@
   "classic_bell": "Klasik Zil",
   "digital": "Dijital",
   "alarm": "Alarm",
+  "sound_settings": "Ses Ayarları",
+  "background_music": "ODAKLANMA MÜZİĞİ",
+  "enable_music": "Arka Plan Müziği",
+  "notification_sound": "BİLDİRİM SESİ",
 
   "quote_1": "Bin kilometrelik yolculuk tek bir adımla başlar. - Lao Tzu",
   "quote_2": "Mükemmellik bir eylem değil, bir alışkanlıktır. - Aristoteles",
